--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,5 +1,3 @@
-
-
 body {
     font-family: 'Roboto', sans-serif;
     color: #333;
@@ -8,4 +6,12 @@ body {
 img {
     max-width: 100%;
     height: auto;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+a {
+    color: $mainOrange;
 }
